[package]
name = "dc_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashbrown = "0.14.3"
itertools = "0.12.0"
rand = "0.8.5"
serde = "1.0.195"
serde_derive = "1.0.195"
serde_json = "1.0.111"
socket2 = { version = "0.5.5", features = ["all"] }
thread_tryjoin = "0.3.0"
tokio = { version = "1.35.1", features = ["net", "rt"] }
